--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,8 +43,8 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.username=precieuxmugisha@gmail.com
-spring.mail.password=gvjdozvtxogpkjcq
+spring.mail.username=premugisha64@gmail.com
+spring.mail.password=mrtdcwbtytdunrnq
 
 
 uploads.directory=/opt/spring_starter/files
