--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ecommerce
-server.port=8000
+server.port=8080
 jwt.secret=j3H5Ld5nYmGWyULy6xwpOgfSH++NgKXnJMq20vpfd+8=t
 jwt.expiresIn=86400000
 spring.datasource.url=jdbc:mysql://localhost:3306/cubex_ecommerce?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
@@ -7,12 +7,12 @@ spring.datasource.username=precieux
 spring.datasource.password=1234567890
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database=mysql
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.session.timeout=60
 spring.session.jdbc.initializer.enabled=true
-spring.session.jdbc.initialize-schema: always
+spring.session.jdbc.initialize-schema= always
 spring.jpa.generate-ddl=true
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=500MB
